[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/UI/Menu/Title.gd" type="Script" id=1]
[ext_resource path="res://assets/placeholders/Logo.png" type="Texture" id=2]
[ext_resource path="res://src/UI/Menu/Buttons/PlayButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Menu/Buttons/OptionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/Menu/Buttons/QuitButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Walk.png" type="Texture" id=6]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_WalkNormalMap.png" type="Texture" id=7]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Jump_Corpo.png" type="Texture" id=8]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Jump_CorpoNormalMap.png" type="Texture" id=9]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Walk_Corpo.png" type="Texture" id=10]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Walk_CorpoNormalMap.png" type="Texture" id=11]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Jump_Braco.png" type="Texture" id=12]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Jump_BracoNormalMap.png" type="Texture" id=13]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Walk_Braco.png" type="Texture" id=14]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Walk_BracoNormalMap.png" type="Texture" id=15]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Jump_Cabeca.png" type="Texture" id=16]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Jump_CabecaNormalMap.png" type="Texture" id=17]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Walk_CabecaNormalMap.png" type="Texture" id=18]
[ext_resource path="res://assets/Characters/GarraDaMorte/Garra_Walk_Cabeca.png" type="Texture" id=19]

[sub_resource type="Animation" id=1]
resource_name = "Walk"
length = 0.94
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6, 0.63, 0.66, 0.69, 0.72, 0.75, 0.78, 0.81, 0.84, 0.87, 0.9, 0.93 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 7, 9, 11, 13, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49, 51, 53, 55, 57, 59 ]
}

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.482572, 0.566406, 0.137177, 1, 0.619016, 0.679688, 0.369049, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "Garra_Jump_Corpo"
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:normal_map")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 29 ]
}

[sub_resource type="Animation" id=5]
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 59 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Garra_Jump_Braco"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:normal_map")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 12 ) ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 59 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:normal_map")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Garra_Jump_Cabeca"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 16 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:normal_map")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 59 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:normal_map")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 18 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 19 ) ]
}

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.970581
margin_top = -1.18092
margin_right = 0.970581
margin_bottom = -1.18094
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 210.0
margin_right = 430.0
margin_bottom = 320.0

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 220.0
margin_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 201.0
margin_right = 220.0
margin_bottom = 281.0
size_flags_vertical = 6

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 220.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_constants/separation = 10
alignment = 1

[node name="PlayButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_right = 220.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 30.0
margin_right = 220.0
margin_bottom = 50.0

[node name="QuitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 60.0
margin_right = 220.0
margin_bottom = 80.0

[node name="Garra_Walk" type="Sprite" parent="."]
position = Vector2( 722.671, 298.21 )
texture = ExtResource( 6 )
normal_map = ExtResource( 7 )
vframes = 8
hframes = 8
frame = 59
region_filter_clip = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Garra_Walk"]
autoplay = "Walk"
anims/Walk = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="Garra_Walk"]
visible = false
position = Vector2( -240.994, -69.8784 )
scale = Vector2( 1, 155.149 )
texture = SubResource( 3 )
offset = Vector2( 0.13, 0.17 )
color = Color( 0.498039, 0.576471, 0.203922, 1 )
energy = 5.06

[node name="Garra_Walk_Corpo" type="Sprite" parent="."]
position = Vector2( 512.09, 438.037 )
texture = ExtResource( 8 )
normal_map = ExtResource( 9 )
vframes = 6
hframes = 6
frame = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="Garra_Walk_Corpo"]
autoplay = "Garra_Walk_Corpo"
anims/Garra_Jump_Corpo = SubResource( 4 )
anims/Garra_Walk_Corpo = SubResource( 5 )

[node name="Garra_Walk_Braco" type="Sprite" parent="."]
position = Vector2( 390.56, 442.723 )
texture = ExtResource( 12 )
normal_map = ExtResource( 13 )
vframes = 6
hframes = 6
frame = 29

[node name="AnimationPlayer" type="AnimationPlayer" parent="Garra_Walk_Braco"]
autoplay = "Garra_Walk_Braco"
anims/Garra_Jump_Braco = SubResource( 6 )
anims/Garra_Walk_Braco = SubResource( 7 )

[node name="Garra_Walk_Cabeca" type="Sprite" parent="."]
position = Vector2( 649.067, 450.448 )
texture = ExtResource( 16 )
normal_map = ExtResource( 17 )
vframes = 6
hframes = 6
frame = 29

[node name="AnimationPlayer" type="AnimationPlayer" parent="Garra_Walk_Cabeca"]
autoplay = "Garra_Walk_Cabeca"
anims/Garra_Jump_Cabeca = SubResource( 8 )
anims/Garra_Walk_Cabeca = SubResource( 9 )
[connection signal="pressed" from="Menu/CenterRow/Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
